--- a/css/carousel.css
+++ b/css/carousel.css
@@ -104,7 +104,7 @@ body {
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: 753px) {
   /* Navbar positioning foo */
   .navbar-wrapper {
     margin-top: 20px;
@@ -123,7 +123,7 @@ body {
     border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 753px;
+    width: 753px;
   }
 
   /* Bump up size of carousel content */
