--- a/css/carousel1.css
+++ b/css/carousel1.css
@@ -18,6 +18,7 @@ body {
   right: 0;
   left: 0;
   z-index: 20;
+
 }
 
 /* Flip around the padding for proper display in narrow viewports */
@@ -39,33 +40,12 @@ body {
 
 /* Carousel base class */
 .carousel {
-  max-height: 500px;
-  max-width: 753px;
-  width: auto;
-  height: auto; 
+  max-width: 768px;
+  margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 60px;
   margin-top: 50px;
 
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  width: auto;
-  height: auto;
 }
 
 
@@ -98,32 +78,34 @@ body {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
+  margin-top: 0px;
 }
 
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 753px) {
+@media (min-width: 768px) {
   /* Navbar positioning foo */
   .navbar-wrapper {
-    margin-top: 20px;
+    margin-top: 0px;
   }
   .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 0px;
+    padding-left: 0px;
   }
   .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
-    border-radius: 4px;
+    border-radius: 0px;
+    width: auto;
+    max-width: 768px;
     margin-left: auto;
     margin-right: auto;
-    width: 753px;
   }
 
   /* Bump up size of carousel content */
@@ -133,13 +115,20 @@ body {
     line-height: 1.4;
   }
 
+  .featurette {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 768px
+  }
+
   .featurette-heading {
     font-size: 50px;
+    margin-top: 0px;
   }
 }
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .featurette-heading {
     margin-top: 120px;
   }
-}
+}*/
