--- a/css/carousel.css
+++ b/css/carousel.css
@@ -12,25 +12,24 @@ body {
 -------------------------------------------------- */
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar {
+.navbar-wrapper {
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   z-index: 20;
-
 }
 
 /* Flip around the padding for proper display in narrow viewports */
-.navbar > .container {
+.navbar-wrapper > .container {
   padding-right: 0;
   padding-left: 0;
 }
-.navbar .navbar {
+.navbar-wrapper .navbar {
   padding-right: 15px;
   padding-left: 15px;
 }
-.navbar .container {
+.navbar-wrapper .navbar .container {
   width: auto;
 }
 
@@ -40,12 +39,36 @@ body {
 
 /* Carousel base class */
 .carousel {
-  max-width: 768px;
-  margin-bottom: 60px;
+  max-height: 500;
+  max-width: 753px;
+  width: auto;
+  height: auto; 
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 60px;
   margin-top: 50px;
 
+}
+/* Since positioning the image, we need to help out the caption */
+/*.carousel-caption {
+  z-index: 10;
+}*/
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  width: 100%;
+  height: 500px;
+  min-height: 100px;
+  background-color: #777;
+}
+
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 
@@ -75,65 +98,61 @@ body {
 
 /* Thin out the marketing headings */
 .featurette-heading {
-  font-weight: 300;
+  /*font-weight: 300;*/
   line-height: 1;
   letter-spacing: -1px;
-  margin-top: 0px;
+  margin-top: 0;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: 753px) {
   /* Navbar positioning foo */
+
   .navbar-wrapper {
     margin-top: 0px;
   }
+
   .navbar-wrapper .container {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-  .navbar-wrapper .navbar {
     padding-right: 15px;
     padding-left: 15px;
   }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
 
   /* The navbar becomes detached from the top, so we round the corners */
-  .navbar {
-    position: fixed;
-    border-radius: 0px;
-    width: auto;
-    max-width: 768px;
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
-
-  .featurette {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 768px
+    width: 753px;
   }
 
   .featurette-heading {
     font-size: 50px;
-    margin-top: 0px;
   }
-}
 
-.footer {
-    position: fixed;
-    height: 100px;
-    bottom: 0;
-    width: 100%;
-    background-color: #f5f5f5;
+  .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
 }
 
 /*@media (min-width: 992px) {
