--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,6 @@
 
 body {
   padding-bottom: 40px;
-  color: #5a5a5a;
 }
 
 
@@ -75,10 +74,30 @@ body {
 
 /* Thin out the marketing headings */
 .featurette-heading {
+  font-family: gudea, sans-serif;
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
   margin-top: 0px;
+}
+
+.text-muted {
+  font-style: italic;
+  font-size: .75em;
+}
+
+/* Footer
+------------------------- */
+
+.footer {
+    height: 30px;
+    bottom: 0;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 768px;
+    background-color: #fff;
+    box-shadow: 0px -.5px 1px #888888;
 }
 
 
@@ -99,10 +118,8 @@ body {
     padding-left: 15px;
   }
 
-  /* The navbar becomes detached from the top, so we round the corners */
   .navbar {
     position: fixed;
-    border-radius: 0px;
     width: auto;
     max-width: 768px;
     margin-left: auto;
@@ -126,15 +143,16 @@ body {
     font-size: 50px;
     margin-top: 0px;
   }
-}
 
-.footer {
-    position: fixed;
-    height: 100px;
+  .footer {
+    height: 30px;
     bottom: 0;
     width: 100%;
-    background-color: #f5f5f5;
+    max-width: 768px;
+  }
 }
+
+
 
 /*@media (min-width: 992px) {
   .featurette-heading {
