--- a/css/custom.css
+++ b/css/custom.css
@@ -144,11 +144,25 @@ body {
     margin-top: 0px;
   }
 
-  .footer {
+  /*.footer {
+    position: fixed;
     height: 30px;
     bottom: 0;
     width: 100%;
     max-width: 768px;
+  }*/
+
+  .footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+  }
+
+  .text-muted {
+    font-size: .5em;
   }
 }
 
