--- a/css/gallery.css
+++ b/css/gallery.css
@@ -37,6 +37,14 @@ ul li img {
   text-align:right;
 }
 
+/*mailchimp styles
+*/
+	#mc_embed_signup {
+	background:#fff; 
+	clear:left; 
+	font:14px Helvetica,Arial,sans-serif; 
+}
+
 @media (min-width: 320px) {
 .col-xs-6 {
   }
